--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "async": "^3.2.1",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -21,6 +22,7 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "express-session": "^1.17.2",
+    "express-validator": "^6.12.2",
     "helmet": "^4.6.0",
     "http-errors": "~1.6.3",
     "luxon": "^2.0.2",
