--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "dev": "nodemon ./bin/www",
+		"mongo:image": "MONGODB_URL=mongodb://the_username:the_password@localhost:3001/inventory SECRET=secret npm run start"
   },
   "dependencies": {
     "async": "^3.2.1",
