--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,11 @@ services:
       MONGO_INITDB_DATABASE: inventory
     volumes: 
       - ./configs/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
-  # app:                    # The name of the service, can be anything
-  #   image: express-server # Declares which image to use
-  #   build: .              # Declares where to build if image is not found
-  #   ports:                # Declares the ports to publish
-  #     - 3000:3000
+  app:                    # The name of the service, can be anything
+    image: express-server # Declares which image to use
+    build: .              # Declares where to build if image is not found
+    ports:                # Declares the ports to publish
+      - 3000:3000
+    environment: 
+      - MONGODB_URL=mongodb://the_username:the_password@mongo:27017/inventory
+      - SECRET=secret # secret use to encrypt passwords
